--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "0.0.1",
   "description": "React Native Bluetooth Low Energy Offline Communication Protocol",
   "main": "index.js",
-  "scripts": {
-
-    
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/heroims/WormholeProtocol-RN.git"
@@ -18,6 +15,7 @@
     "react-native": "0.66.3",
     "react-native-ble-manager": "^8.0.2",
     "react-native-ble-peripheral": "github:heroims/react-native-ble-peripheral",
+    "react-native-permissions": "^3.3.1",
     "react-native-storage": "^1.0.1"
   },
   "keywords": [
