--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-ble-wormhole",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "React Native Bluetooth Low Energy Offline Communication Protocol",
   "main": "index.js",
   "scripts": {},
@@ -30,5 +30,8 @@
   "bugs": {
     "url": "https://github.com/heroims/WormholeProtocol-RN/issues"
   },
-  "homepage": "https://github.com/heroims/WormholeProtocol-RN#readme"
+  "homepage": "https://github.com/heroims/WormholeProtocol-RN#readme",
+  "dependencies": {
+    "@heroims/react-native-ble-peripheral": "^2.0.3"
+  }
 }
