fix package.json format

--- a/package.json
+++ b/package.json
@@ -29,5 +29,5 @@
   "bugs": {
     "url": "https://github.com/heroims/WormholeProtocol-RN/issues"
   },
-  "homepage": "https://github.com/heroims/WormholeProtocol-RN#readme",
+  "homepage": "https://github.com/heroims/WormholeProtocol-RN#readme"
 }
